--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>moments</title>
-  <meta name="description" content="using datalist (html element), moment.js and draggabilly">
+  <link rel="icon" type="image/svg+xml" href="icon.svg" />
+
   <!-- Moment.js and Moment-Timezone -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.32/moment-timezone-with-data-10-year-range.min.js"></script>
