cambios en font family de added clocks

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     #added-clocks-container>* {
       color: rgb(133, 252, 133);
-      font-family: var(--font-2);
+      /* font-family: var(--font-2); */
 
     }
 
